<resources>
    <string name="app_name">Flashcards</string>
    <string name="tool_text">tool text</string>
    <string name="tool_card_name">card name</string>
    <string name="tool_front_side">front side</string>
    <string name="tool_back_side">back side</string>
    <string name="add_new_stack">add new stack</string>
    <string name="hint_name_of_stack">Stack name</string>
    <string name="hint_add_card_front_text">Front side text</string>
    <string name="hint_add_card_back_text">Back side text</string>
    <string name="save_button_text">save</string>
    <string name="hint_name">Stack name</string>
    <string name="error_input_layout">cannot be empty</string>
    <string name="list_stack_is_empty">Stack list is empty</string>
    <string name="list_card_is_empty">Card list is empty</string>
    <string name="add_new_card">add new card</string>
    <string name="pref_screen_stack_category_key">stack_sort</string>
    <string name="pref_screen_card_category_key">card_sort</string>
    <string name="pref_screen_stack_category_title">Stack settings</string>
    <string name="pref_screen_card_category_title">Card settings</string>
    <string name="sort_default">sort by addition</string>
    <string name="pref_card_sort_title">card sort</string>
    <string name="pref_stack_sort_title">stack sort</string>
    <string name="settings">settings</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="theme_title">Theme settings</string>
    <string name="theme_key_category">theme_key</string>
    <string name="choose_theme_title">Choose theme</string>
</resources>